Merge branch 'master' of https://github.com/tianjun102/midland-parent
# Conflicts:
#	midland-bs-mannager/src/main/resources/properties/appsetting.properties
#	midland-service/src/main/java/com/midland/web/SmsSender/SmsClient.java